--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
 								<div class="speaker-description">
 									<h2>carlo von lynX<br></h2>
 									<span class="sub">#youbroketheinternet</span>
-									<p>Dem IRC das /me beigebracht; STERN, ZEIT, SPIEGEL den Start ins Web erleichtert und Certificate Patrol für Firefox angestoßen. Carlo's Chat PSYC lebt heute in secushare's verteiltem sozialem Netzwerkprojekt. Zur Lösung des Überwachungsproblems feilt er an Gesetzgebung und arbeitet an #youbroketheinternet.</p>
+									<p>Dem IRC das /me beigebracht; STERN, ZEIT, SPIEGEL den Start ins Web erleichtert und Certificate Patrol für Firefox angestoßen. Carlos Protokoll PSYC lebt heute in secushares verteiltem soz. Netzwerkprojekt. Zur Lösung des Überwachungsproblems feilt er an Gesetzgebung und arbeitet an #youbroketheinternet.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -1137,6 +1137,26 @@
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
+										<img class="background-image" alt="Federico Capoano" src="img/FedericoCapoano.JPG">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/Ju_lea"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/in/julea"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Federico Capoano<br></h2>
+									<span class="sub">Software-Entwickler</span>
+									<p>Aus Italien, Open Source Web-Entwickler, Mesh-Netzwerker, Python- und Django-Liebhaber, auch interessiert an Ruby on Rails, Javascript und UX. Aktiv bei @ninuxorg in Rom.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
 										<img class="background-image" alt="Jenz Steiner" src="img/JenzSteiner.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
@@ -1161,46 +1181,6 @@
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
-										<img class="background-image" alt="Frank Hofmann" src="img/frankhofmann.jpg">
-										<div class="hover-state text-center preserve3d">
-											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/hofmannedv"><i class="icon social_twitter"></i></a>
-												
-											</div>
-										</div>
-									</div>
-								</div>
-		
-								<div class="speaker-description">
-									<h2>Frank Hofmann<br></h2>
-									<span class="sub">lug.berlin</span>
-									<p>Frank ist Teil des Open-Source Experten-Netzwerks Büro 2.0 in Berlin und arbeitet als Dienstleister mit Spezialisierung auf Druck und Satz. Als Autor schreibt er für Linux Magazine und LinuxUser. Er gehört zu den Koordinatoren der Treffen über die Plattform lug.berlin.</p><div><br></div>
-								</div>
-							</div>
-						</div><div class="col-md-6 col-sm-12">
-							<div class="speaker-with-bio">
-								<div class="speaker">
-									<div class="image-holder">
-										<img class="background-image" alt="Federico Capoano" src="img/FedericoCapoano.JPG">
-										<div class="hover-state text-center preserve3d">
-											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/Ju_lea"><i class="icon social_twitter"></i></a>
-												<a target="default" href="https://de.linkedin.com/in/julea"><i class="icon social_linkedin"></i></a>
-											</div>
-										</div>
-									</div>
-								</div>
-		
-								<div class="speaker-description">
-									<h2>Federico Capoano<br></h2>
-									<span class="sub">Software-Entwickler</span>
-									<p>Aus Italien, Open Source Web-Entwickler, Mesh-Netzwerker, Python- und Django-Liebhaber, auch interessiert an Ruby on Rails, Javascript und UX. Aktiv bei @ninuxorg in Rom.</p>
-								</div>
-							</div>
-						</div><div class="col-md-6 col-sm-12">
-							<div class="speaker-with-bio">
-								<div class="speaker">
-									<div class="image-holder">
 										<img class="background-image" alt="Julia Kleeberger" src="img/JuliaKleeberger.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
@@ -1215,6 +1195,26 @@
 									<h2>Julia Kleeberger<br></h2>
 									<span class="sub">Gründerin&nbsp;Junge Tüftler</span>
 									<p>Julia ist eine Design-Strategistin mit Doktorabschluss. Sie glaubt an die Weisheit der Hände und daran, dass man Wissen durch eigenes Ausprobieren erfährt. Sie teilt ihre Leidenschaft in Technologie-Workshops und als Dozentin für DIY Seminare an der Kunst &amp; Design-Universität Braunschweig.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Frank Hofmann" src="img/frankhofmann.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/hofmannedv"><i class="icon social_twitter"></i></a>
+												
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Frank Hofmann<br></h2>
+									<span class="sub">lug.berlin</span>
+									<p>Frank ist Teil des Open-Source Experten-Netzwerks Büro 2.0 in Berlin und arbeitet als Dienstleister mit Spezialisierung auf Druck und Satz. Als Autor schreibt er für Linux Magazine und LinuxUser. Er gehört zu den Koordinatoren der Treffen über die Plattform lug.berlin.</p><div><br></div>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -1254,7 +1254,29 @@
 								<div class="speaker-description">
 									<h2>Elio Qoshi<br></h2>
 									<span class="sub">Gründer Tirana Hackerspace Open Labs Albania</span>
-									<p>Für Elio "Sharing is caring". Er ist Entwickler, Designer und Mozilla Rep. Als Vorstandsmitglied engagiert er sich für den Tirana Hackerspace Open Labs Albania. Er die Infosite ura.al and gegründet und organisiert die Open Source-Konferenz Albanien.</p>
+									<p>Für Elio "Sharing is caring". Er ist Community Builder, Designer und Mozilla 
+		Rep. Als Vorstandsmitglied engagiert er sich für den Tirana Hackerspace 
+		Open Labs Albania. Er ist Autor auf SitePoint.com und organisiert die Open Source--Konferenz Albania, aka OSCAL.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Anja Müller" src="img/AnjaMüller.JPG">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/Ju_lea"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/in/julea"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Anja Müller<br></h2>
+									<span class="sub">digiS - Servicestelle Digitalisierung</span>
+									<p>Anja Müller ist seit 2012 bei digiS, der Servicestelle Digitalisierung Berlin als Projektkoordinatorin tätig. Davor als wissenschaftliche Dokumentarin bei Medienarchiven (Deutsches Rundfunkarchiv, RBB) und Projektleiterin beim Stasi-Unterlagenarchiv (BStU). </p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -1295,26 +1317,6 @@
 									<h2>Simon Meggle<br></h2>
 									<span class="sub">Sakuli Monitoring Specialist</span>
 									<p>Simon arbeitet bei ConSol* in München, wo er Kunden bei allen Themen rund um Open-Source-Monitoring unterstützt. Er ist Mitbegründer des Frameworks Sakuli, das Tastatur- und Mausaktionen des Anwenders simulieren und in Applikations-End2End-Tests für Nagios automatisch ausführen kann.</p>
-								</div>
-							</div>
-						</div><div class="col-md-6 col-sm-12">
-							<div class="speaker-with-bio">
-								<div class="speaker">
-									<div class="image-holder">
-										<img class="background-image" alt="Anja Müller" src="img/AnjaMüller.JPG">
-										<div class="hover-state text-center preserve3d">
-											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/Ju_lea"><i class="icon social_twitter"></i></a>
-												<a target="default" href="https://de.linkedin.com/in/julea"><i class="icon social_linkedin"></i></a>
-											</div>
-										</div>
-									</div>
-								</div>
-		
-								<div class="speaker-description">
-									<h2>Anja Müller<br></h2>
-									<span class="sub">digiS - Servicestelle Digitalisierung</span>
-									<p>Anja Müller ist seit 2012 bei digiS, der Servicestelle Digitalisierung Berlin als Projektkoordinatorin tätig. Davor als wissenschaftliche Dokumentarin bei Medienarchiven (Deutsches Rundfunkarchiv, RBB) und Projektleiterin beim Stasi-Unterlagenarchiv (BStU). </p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
