--- a/index.html
+++ b/index.html
@@ -43,6 +43,21 @@
     </head>
 
 
+   
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Meetup</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
+        <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
+        <link href="css/elegant-icons.min.css" rel="stylesheet" type="text/css" media="all"/>
+        <link href="css/pe-icon-7-stroke.min.css" rel="stylesheet" type="text/css" media="all"/>
+        <link href="css/lightbox.min.css" rel="stylesheet" type="text/css" media="all"/>
+        <link href="css/theme-properorange.css" rel="stylesheet" type="text/css" media="all"/>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>
+    </head>
     <body class="no-loader">
     
     	<div class="loader">
@@ -1326,8 +1341,8 @@
 										<img class="background-image" alt="Klaus Gropper" src="img/KlausGropper.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/Ju_lea"><i class="icon social_twitter"></i></a>
-												<a target="default" href="https://de.linkedin.com/in/julea"><i class="icon social_linkedin"></i></a>
+												<a target="default" href="https://twitter.com/gropbot"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/pub/klaus-gropper/14/960/654"><i class="icon social_linkedin"></i></a>
 											</div>
 										</div>
 									</div>
@@ -1572,6 +1587,26 @@
 									<h2>Alexandra Quiring-Tegeder<br></h2>
 									<span class="sub">Kinder geben Kommandos</span>
 									<p>Arbeitet seit 15 Jahren für Unternehmen, führt eine Digital-Agentur, ist verheiratet und hat zwei Söhne im Alter von 7 und 17 Jahren. Inspiriert von „Hour of Code“ in den USA, macht sie mit "Kinder geben Kommandos" Programmier-Workshops für Schüler.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Holger Everding" src="img/HolgerEverding.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												
+												<a target="default" href="https://de.linkedin.com/pub/holger-everding/29/9b4/220"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Holger Everding<br></h2>
+									<span class="sub">Freie Farben -&nbsp;dtp studio oldenburg</span>
+									<p>In über 20 Jahren Farbensoftware-Herstellung habe ich festgestellt: mit keinem der üblichen Farbsysteme kann man in der Praxis frei arbeiten. Dabei gäbe es viel bessere Wege!</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
