--- a/index.html
+++ b/index.html
@@ -42,22 +42,6 @@
 		</script>
     </head>
 
-
-   
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Meetup</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="css/elegant-icons.min.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="css/pe-icon-7-stroke.min.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="css/lightbox.min.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href="css/theme-properorange.css" rel="stylesheet" type="text/css" media="all"/>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>
-    </head>
     <body class="no-loader">
     
     	<div class="loader">
@@ -1050,7 +1034,7 @@
 								<div class="speaker-description">
 									<h2>Frederik Kramer<br></h2>
 									<span class="sub">CTO initOS</span>
-									<p>Frederik studierte Wirtschaftswissenschaften an der Otto von Guericke Universität Magdeburg. Frederik startete seine erste Firma 1997. Heute ist er CTO der initOS und Doktorant mit dem Thema "Strategisches Engineering von Systemlandschaften für KMUs.</p>
+									<p>Frederik studierte Wirtschaftsinformatik an der Otto-von-Guericke-Universität Magdeburg. Frederik startete seine erste Firma 1997. Heute ist er CTO der initOS und Doktorant mit dem Thema "Strategisches Engineering von Systemlandschaften für KMUs.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
