--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		</script>
     </head>
 
+
     <body class="no-loader">
     
     	<div class="loader">
@@ -1451,6 +1452,46 @@
 									<h2>Jan Suhr<br></h2>
 									<span class="sub">Gründer Nitrokey</span>
 									<p>Jan beschäftigt sich seit mehr als 10 Jahren intensiv mit dem Thema Open Hardware und Kryptographie. Sein Projekt und Startup Nitrokey basiert auf Open Hardware und Open Source-Software-Verschlüsselung. Jan arbeitet als Consultant bei internationalen Firmen in Deutschland und Singapur.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Danny Krautz" src="img/DannyKrautz.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/BerlinPartner"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/pub/dr-danny-krautz/5a/1b0/956/en"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Danny Krautz<br></h2>
+									<span class="sub">Account Manager Photonics at Berlin Partner</span>
+									<p>Dr. Danny Krautz is in charge of companies and research institutes in the federal state of Berlin to establish and enhancing their business activities, identifying collaborations, finding funding opportunities and supporting their market entries.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Luisa Maier" src="img/LuisaMaier.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/LaLashling"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/pub/luisa-maier/8/508/605"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Luisa Maier<br></h2>
+									<span class="sub">Tech All Stars</span>
+									<p>Project Manager at European Union funded start up competition Tech All Stars. Proud kraut* Prouder saffer** People. Culture. Nature. Travel. Adventure. Learning. Loving. Sport. Art. Living Green. Luisa is passionate about creating a sustainable planet and good life for all people and generations to come.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
