--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 		</script>
     </head>
 
-
     <body class="no-loader">
     
     	<div class="loader">
@@ -242,12 +241,6 @@
 								</div>
 							</div><div class="col-md-4 col-sm-6 sponsor-column">
 								<div class="sponsor text-center">
-									<a href="http://blog.fossasia.org" target="default">
-										<img alt="FOSSASIA" src="img/fossasia-squarelogo.png">
-									</a>
-								</div>
-							</div><div class="col-md-4 col-sm-6 sponsor-column">
-								<div class="sponsor text-center">
 									<a href="http://linuxtag.de" target="default">
 										<img alt="Linuxtag" src="img/LinuxTag.jpg">
 									</a>
@@ -266,8 +259,26 @@
 						
 							<div class="col-md-4 col-sm-6 sponsor-column">
 								<div class="sponsor text-center">
+									<a href="http://blog.fossasia.org" target="default">
+										<img alt="FOSSASIA" src="img/fossasia-squarelogo.png">
+									</a>
+								</div>
+							</div><div class="col-md-4 col-sm-6 sponsor-column">
+								<div class="sponsor text-center">
 									<a href="https://lpievent.lpice.eu" target="default">
 										<img alt="LPI" src="img/LPI.png">
+									</a>
+								</div>
+							</div><div class="col-md-4 col-sm-6 sponsor-column">
+								<div class="sponsor text-center">
+									<a href="http://chemnitzer.linux-tage.de/" target="default">
+										<img alt="Chemnitzer Linuxtage" src="img/clt.png">
+									</a>
+								</div>
+							</div><div class="col-md-4 col-sm-6 sponsor-column">
+								<div class="sponsor text-center">
+									<a href="http://www.opensourcepress.de" target="default">
+										<img alt="Open Source Press" src="img/open_source_press.png">
 									</a>
 								</div>
 							</div>
