--- a/index.html
+++ b/index.html
@@ -596,20 +596,20 @@
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
-										<img class="background-image" alt="Bernd Erk" src="img/bernderk.jpg">
+										<img class="background-image" alt="Markus Frosch" src="img/MarkusFrosch.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/icinga"><i class="icon social_twitter"></i></a>
-												<a target="default" href="http://de.linkedin.com/in/bernderk"><i class="icon social_linkedin"></i></a>
+												<a target="default" href="https://twitter.com/lazyfrosch"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/pub/markus-frosch/92/95a/b5b/en"><i class="icon social_linkedin"></i></a>
 											</div>
 										</div>
 									</div>
 								</div>
 		
 								<div class="speaker-description">
-									<h2>Bernd Erk</h2>
-									<span class="sub">CEO Netways</span>
-									<p>Bernd ist Geschäftsführer der NETWAYS Gruppe. Er hat Erfahrung mit Java und Oracle-Datenbanken und kümmert er sich um das Thema Reporting bei NETWAYS und der Open Source-Monitoring-Lösung Icinga.</p>
+									<h2>Markus Frosch</h2>
+									<span class="sub">Netways</span>
+									<p>Markus is into open source software as a user and an administrator. He is working as a consultant with focus on monitoring, system management, teaching and helping customers. Markus is active within the Debian project and part of the Icinga team for packaging.</p>
 								</div>
 							</div>
 						</div>
