--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 							</div>
 						
 							<div class="col-md-4 col-sm-8">
-								<h1>Download die OTS App mit allen Infos zu Vorträgen und Zeiten!</h1>
+								<h1>OTS App mit allen Infos zu Vorträgen und Zeiten herunterladen!</h1>
 								<p><br></p>
 							</div>
 						</a>
