--- a/index.html
+++ b/index.html
@@ -2304,7 +2304,7 @@
 							</div>
 						</a>
 						
-						<a href="http://opentechsummit.net/OTS15PressPkg.zig" class="block-content" target="default"> &nbsp;
+						<a href="http://opentechsummit.net/OTS15PressPkg.zip" class="block-content" target="default"> &nbsp;
 							<div class="col-md-2 col-sm-4 text-center">
 								<i class="icon pe-7s-micro icon-large"></i>
 							</div>
