--- a/en.html
+++ b/en.html
@@ -1610,7 +1610,7 @@
 							</div>
 						</a>
 						
-						<a href="#press" class="block-content">&nbsp;
+						<a href="http://opentechsummit.net/OTS15PressPkg.zip" class="block-content" target="default">&nbsp;
 							<div class="col-md-2 col-sm-4 text-center">
 								<i class="icon pe-7s-micro icon-large"></i>
 							</div>
