--- a/en.html
+++ b/en.html
@@ -37,6 +37,13 @@
 		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 		  ga('create', 'UA-17146009-7', 'auto');
+		  ga('send', 'pageview');
+
+		</script>
+    </head>
+
+
+
 <!doctype html>
 <html lang="en">
     <head>
@@ -1218,7 +1225,7 @@
 				
 						<div class="row">
 							<div class="col-sm-12">
-								<h1>Nearby Accomodation</h1>
+								<h1>Workshops</h1>
 							</div>
 						</div>
 				
