--- a/en.html
+++ b/en.html
@@ -1245,7 +1245,7 @@
 							<div class="col-md-4 col-sm-6">
 								<div class="info-box">
 									<img alt="Podcasts" src="img/podcast-workshop.jpg">
-									<h3>Radio plays, podcasts or make reports is easy! Jenz shows you how.</h3>
+									<h3>Radio plays, podcasts or making news reports - it is easy! Jenz shows you how.</h3>
 									<p>Let's make some radio plays, podcasts or news reports with audacity on your own PC.<div><br></div><div><br></div></p>
 									<div class="text-link">
 										
@@ -1267,7 +1267,7 @@
 							</div><div class="col-md-4 col-sm-6">
 								<div class="info-box">
 									<img alt="Machine Knitting" src="img/opentechknitting.jpg">
-									<h3>We upgrade knitting machine with a PC and and learn how to knit our own pictures knit with Andi from Weimar</h3>
+									<h3>We upgrade knitting machines with a PC and and learn how to knit our own pictures knit with Andi from Weimar</h3>
 									<p>We are upgrading an old knitting machine with a small computer and knit your logo and images. Brother has built knitting machines in the 90ies. You could knit pattern drawn from books for example. The AYAB project has built an Arduino Shield. So now, we can connect those machine and use our PC.<div><br></div><div><br></div></p>
 									<div class="text-link">
 										
