--- a/en.html
+++ b/en.html
@@ -236,15 +236,15 @@
 				
 				<div class="container">
 					<div class="row">
-						<a href="http://ots15.eventbrite.com/" class="block-content" target="default">
+						<a href="http://opentechsummit.net/Programm.pdf" class="block-content" target="default">
 							<div class="col-md-2 col-sm-4 text-center">
-								<i class="icon pe-7s-cash"></i>
+								<i class="icon pe-7s-right-arrow icon-large"></i>
 							</div>
 						
 							<div class="col-md-4 col-sm-8">
-								<h1>Purchase a ticket!</h1>
+								<h1>Download the Program as a PDF!</h1>
 								<p>
-									Tickets for students, community, kids and business participants.
+									Talk tracks, Kids and Maker Space, Workshops, Exhibition and Barcamp
 								</p>
 							</div>
 						</a>
