--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     </head>
 
 
+
 <!doctype html>
 <html lang="en">
     <head>
@@ -226,13 +227,13 @@
 				
 				<div class="container">
 					<div class="row">
-						<a href="http://ots15.eventbrite.com" class="block-content" target="default">
+						<a href="http://opentechsummit.net/Programm.pdf" class="block-content" target="default">
 							<div class="col-md-2 col-sm-4 text-center">
-								<i class="icon pe-7s-cash"></i>
+								<i class="icon pe-7s-right-arrow icon-large"></i>
 							</div>
 						
 							<div class="col-md-4 col-sm-8">
-								<h1>Tickets für Studenten, Entwickler, Community und Business!</h1>
+								<h1>Programm als PDF herunterladen!</h1>
 								<p><br></p>
 							</div>
 						</a>
