--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					
 							<div class="col-md-10 text-right">
 								<ul class="menu">
-									<li><a class="inner-link" href="#top" target="default">Home&nbsp;</a></li><li><a class="inner-link" href="#workshops" target="default">Workshops&nbsp;</a></li><li><a href="http://ots15.eventbrite.com" target="default">Tickets&nbsp;</a></li><li><a class="inner-link" href="#speakers" target="default">Speakers</a></li><li><a class="inner-link" href="#ort" target="default">Ort&nbsp;</a></li><li><a class="inner-link" href="#lpi" target="default">Linux Zertifikat</a></li><li><a class="inner-link" href="#sponsors" target="default">Partner&nbsp;</a></li><li><a class="inner-link" href="#press" target="default">PressE</a></li>
+									<li><a class="inner-link" href="#top" target="default">Home&nbsp;</a></li><li><a href="programm.html" target="_blank">Programm&nbsp;</a></li><li><a class="inner-link" href="#workshops" target="default">Workshops&nbsp;</a></li><li><a href="http://ots15.eventbrite.com" target="default">Tickets&nbsp;</a></li><li><a class="inner-link" href="#speakers" target="default">Speakers</a></li><li><a class="inner-link" href="#ort" target="default">Ort&nbsp;</a></li><li><a class="inner-link" href="#lpi" target="default">Linux Zertifikat</a></li><li><a class="inner-link" href="#sponsors" target="default">Partner&nbsp;</a></li><li><a class="inner-link" href="#press" target="default">PressE</a></li>
 									
 									<li><a href="/en.html" target="_self">eN</a></li>
 									<li class="social-link"><a href="https://twitter.com/opntec" target="default"><i class="icon social_twitter"></i></a></li>
@@ -1719,7 +1719,7 @@
 			
 			</section>
 			
-			<a id="cfp" class="in-page-link"></a>
+			<a id="programm" class="in-page-link"></a>
 			
 			<section class="strip-divider primary-overlay">
 					<div class="background-image-holder parallax-background">
@@ -1737,7 +1737,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-12 text-center">
-								<h1 class="text-white">OpenTechSummit &nbsp;Berlin 2015&nbsp;<a href="CallSpeakers.pdf" target="default">Call for Speakers</a><div><br></div></h1><h1 class="text-white">Einreichungen hier: <a href="http://opentechsummit.net/speaker-registration" target="default">Registrierung</a></h1>
+								<h1 class="text-white">OpenTechSummit &nbsp;Berlin 2015&nbsp;<a href="programm.html" target="_blank">Programm</a><div><br></div></h1><h1 class="text-white">Oder hier die <a href="https://play.google.com/store/apps/details?id=org.opentech" target="default">Android App herunterladen</a></h1>
 							</div>
 						</div>
 					</div>
@@ -2108,7 +2108,7 @@
 			
 			</section>
 			
-			<a id="programm" class="in-page-link"></a>
+			<a id="themen" class="in-page-link"></a>
 			
 			<section class="duplicatable-content visitor-info">
 					<div class="container">
