--- a/index.html
+++ b/index.html
@@ -2329,7 +2329,7 @@
 								<div class="info-box">
 									<img alt="Freie Skulpturen von Kai Mertens" src="img/freieskulpturen.jpg">
 									<h3>Freie Skulpturen von Kai Mertens</h3>
-									<p><div>Winter Morning Berlin &nbsp;bemalter Stahl, Aluminium ca. 250 × 250 × 250cm Berlin, 2012 &nbsp;von Kai Mertens.</div><div>Kai Mertens ist ein Berliner Künstler, der seine Skulpturen ausschliesslich mit freie Software herstellt. Er nutzt GNU/Linux-Systeme und freie Designprogramme.</div></p>
+									<p><div>Winter Morning Berlin &nbsp;bemalter Stahl, Aluminium ca. 250 × 250 × 250cm Berlin, 2012 &nbsp;von Kai Mertens.</div><div>Kai Mertens ist ein Berliner Künstler, der seine Skulpturen ausschliesslich mit freier Software herstellt. Er nutzt GNU/Linux-Systeme und freie Designprogramme.</div></p>
 									<div class="text-link">
 										
 										<a href="http://www.kai-mertens.de" target="default">Website</a>
