--- a/index.html
+++ b/index.html
@@ -1899,7 +1899,7 @@
 								<div class="info-box">
 									<img alt="Freifunk-Map" src="img/olsrmapberlinkrass9zh.jpg">
 									<h3>Wir bauen unser eigenes lokales Internet</h3>
-									<p>Andre Gaul baut mit uns ein eigenes lokales Netz (Freifunknetz), dass auch ohne das große weltweite Internet funktioniert. Wir lernen wie wir vom Routerinstallation bis zur Konfiguration und dem Austellen der Geräte alles selber machen können.</p><div><br></div><div><br></div>
+									<p>Andre Gaul baut mit uns ein eigenes lokales Netz (Freifunknetz), dass auch ohne das große weltweite Internet funktioniert. Wir lernen wie wir von der Routerinstallation bis zur Konfiguration und dem Aufstellen der Geräte alles selber machen können.</p><div><br></div><div><br></div>
 									<div class="text-link">
 										
 										<a href="http://www.meetup.com/OpenXLab/events/222369803/" target="default">Workshop-Registrierung</a>
