--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     </head>
 
 
+
 <!doctype html>
 <html lang="en">
     <head>
@@ -1860,7 +1861,7 @@
 									<h3>Praktische Verschlüsselung für Anfänger mit Hauke</h3>
 									<p>Hauke macht eine praktische Einführung in XMPP-OTR und OpenPGP. Was ist das? Das sind kleine Werkzeuge, die ihr für die Verschlüsselung eurer Kommunikation braucht. Ihr werdet herausfinden, dass es eigentlich gar nicht so schwer ist seine Kommunikation sicher zu machen.</p><div><br></div>
 									<div class="text-link">
-										
+										<a href="http://www.openpgp-schulungen.de/angebote/berlin/2015-05-14--ots.html" target="default">Website</a>
 										<a href="http://www.meetup.com/OpenXLab/events/222369401/" target="default">Workshop-Registrierung</a>
 									</div>			
 								</div>
