--- a/en.html
+++ b/en.html
@@ -43,6 +43,7 @@
     </head>
 
 
+
 <!doctype html>
 <html lang="en">
     <head>
@@ -81,7 +82,7 @@
 					
 							<div class="col-md-10 text-right">
 								<ul class="menu">
-									<li><a class="inner-link" href="#about-scroll">Home</a></li><li><a class="inner-link" href="#workshops" target="default">Workshops</a></li><li><a href="http://ots15.eventbrite.com" target="default">Tickets</a></li><li><a class="inner-link" href="#speakers" target="default">Speakers</a></li><li><a class="inner-link" href="#venue" target="default">Venue</a></li><li><a class="inner-link" href="#team" target="default">Team</a></li><li><a class="inner-link" href="#team" target="default">Partner</a></li><li><a class="inner-link" href="#press" target="default">Press</a></li>
+									<li><a class="inner-link" href="#about-scroll">Home</a></li><li><a href="Programm.pdf" target="default">Programm</a></li><li><a class="inner-link" href="#workshops" target="default">Workshops</a></li><li><a href="http://ots15.eventbrite.com" target="default">Tickets</a></li><li><a class="inner-link" href="#speakers" target="default">Speakers</a></li><li><a class="inner-link" href="#venue" target="default">Venue</a></li><li><a class="inner-link" href="#team" target="default">Team</a></li><li><a class="inner-link" href="#partner" target="default">Partner</a></li><li><a class="inner-link" href="#press" target="default">Press</a></li>
 									
 									<li><a href="http://opentechsummit.net" target="_self">DE</a></li>
 									<li class="social-link"><a href="http://twitter.com/opntec" target="default"><i class="icon social_twitter"></i></a></li>
@@ -229,6 +230,8 @@
 				</ul>
 			</section>
 			
+			<a id="app" class="in-page-link"></a>
+			
 			<section class="color-blocks">
 				<div class="color-block block-left col-md-6 col-sm-12"></div>
 				<div class="color-block block-right col-md-6 col-sm-12"></div>
@@ -264,7 +267,7 @@
 				</div>
 			</section>
 			
-			<a id="sponsors" class="in-page-link"></a>
+			<a id="partner" class="in-page-link"></a>
 			
 			<section class="sponsors">
 				<div class="container">
@@ -1115,7 +1118,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-12 text-center">
-								<h1 class="text-white">OpenTechSummit &nbsp;Berlin 2015&nbsp;<a href="CallSpeakers.pdf" target="default">Call for Speakers</a><div><br></div></h1><h1 class="text-white">Proposals here: <a href="http://opentechsummit.net/speaker-registration" target="default">Registration</a></h1>
+								<h1 class="text-white">OpenTechSummit &nbsp;Berlin 2015&nbsp;<a href="Programm.pdf" target="default">Schedule</a><div><br></div></h1><h1 class="text-white">Please download our: <a href="https://play.google.com/store/apps/details?id=org.opentech" target="default">Android App</a></h1>
 							</div>
 						</div>
 					</div>
