--- a/index.html
+++ b/index.html
@@ -1712,6 +1712,26 @@
 									<p>Andrew hat Netzwerkarchitekturen für "High Performance Computing" (HPC) und Storage-Cluster am CERN aber auch für kommerzielle Clouds auf AWS entwickelt. Bei seiner Firma Otter Networks geht es darum Risiken in Cloudsystemen zu identifizieren und Lösungen zu entwickeln.&nbsp;</p>
 								</div>
 							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="René Bohne" src="img/ReneBohne.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/rene_bohne"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://www.linkedin.com/in/renebohne"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>René Bohne<br></h2>
+									<span class="sub">wear-leds.com</span>
+									<p>René is the Lab Manager of FabLab Aachen, Germany's first fab lab since 2009. He is a research assistant at the Media Computing Group of RWTH Aachen University. His book "Making Things Wearable" (published by O'Reilly) is the first German book about DIY wearables. His latest open source project is called wear-leds.com&nbsp;</p>
+								</div>
+							</div>
 						</div></div>
 					
 					
